--- a/4.3ProductLandingPage/styles.css
+++ b/4.3ProductLandingPage/styles.css
@@ -256,7 +256,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 0rem;
+  padding-bottom: 3rem;
+  gap: 3rem;
 }
 
 #Customers img {
@@ -264,46 +265,63 @@ body {
 }
 
 .slider {
+  position: relative;
   width: 100%;
   overflow: hidden;
-  position: relative;
-  padding: 3rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.slides-container {
+  overflow: hidden;
+  width: 100%;
+  padding-bottom: 1.5rem;
 }
 
 .slides {
   display: flex;
   gap: 2rem;
-  animation: slide 30s linear infinite;
+  transition: transform 0.5s ease;
 }
 
 .card {
-  min-width: 450px;
+  min-width: 250px;
   background: white;
   border-radius: 15px;
   padding: 1rem;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
+  flex-shrink: 0;
 }
 
-.card img {
-  width: 100%;
-  height: auto;
+.card p {
+  margin-top: 10px;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 45%;
+  transform: translateY(-50%);
+  background: var(--color-primary);
+  border: none;
+  color: white;
+  font-size: 2rem;
+  padding: 0.1rem 0.6rem;
+  padding-bottom: 0.3rem;
   border-radius: 10px;
+  cursor: pointer;
+  z-index: 2;
 }
 
-@keyframes slide {
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(-50%);
-  }
+.prev {
+  left: 10px;
 }
+
+.next {
+  right: 10px;
+}
+
 
 /* CONTACT */
 
@@ -315,6 +333,7 @@ body {
   font-size: var(--font-size-h5);
   gap: 3rem;
   padding: 1rem 0;
+  text-align: center;
 }
 
 #Contact img {
@@ -357,5 +376,99 @@ footer {
 
 
 
+/* MOBILE LAYOUT */
+@media (max-width: 768px) {
 
-@media (max-width: 768px) {}
+  /* NAVBAR */
+  #nav-bar img {
+    width: 50px;
+    height: auto;
+  }
+
+  #link-container {
+    font-size: 3.2vw;
+    gap: 1rem;
+    text-align: center;
+  }
+
+  #nav-bar {
+    padding-right: 0.5rem;
+  }
+
+  /* HEADER TEXT */
+  .header-text {
+    text-align: center;
+  }
+
+
+  /* HERO */
+
+  #hero-title {
+    -webkit-text-stroke: 6px black;
+  }
+
+
+  /* ABOUT */
+  #About_Us {
+    gap: 0rem;
+  }
+
+  #about-container {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem 5rem;
+  }
+
+  #about-text {
+    align-items: center;
+  }
+
+  #about-text>p {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  #About_Us video {
+    width: 60vw;
+  }
+
+  /* Products */
+  #Products {
+    padding: 2rem 5rem;
+  }
+
+  .product-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3rem;
+  }
+
+  .product-item {
+    min-width: 150px;
+  }
+
+
+  #dishwashing {
+    width: 190px !important;
+  }
+
+  #laundry {
+    width: 135px !important;
+  }
+
+  .product-item h3 {
+    font-size: 1.1rem;
+  }
+
+  /* CUSTOMERS */
+
+  #Customers img {
+    width: 95vw;
+  }
+
+  /* CONTACT */
+  #Contact img{
+    width: 80VW;
+  }
+
+}
